Sculpt: Grag Silhouette and mirror error #82188

Closed
opened 2020-10-28 11:49:50 +01:00 by Antonio Puentes · 6 comments

System Information
Operating system: Linux-5.8.16-2-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 14:27, hash: 90e12e823f
Worked: (newest version of Blender that worked as expected)

Short description of error
Error when using the grab brush with grab silhouette option and mirror activated.

Exact steps for others to reproduce the error
The steps in the attached video
Error_Sculp_Brush_Grab_Silhouette_And_Mirror.mp4

**System Information** Operating system: Linux-5.8.16-2-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 14:27, hash: `90e12e823f` Worked: (newest version of Blender that worked as expected) **Short description of error** Error when using the grab brush with grab silhouette option and mirror activated. **Exact steps for others to reproduce the error** The steps in the attached video [Error_Sculp_Brush_Grab_Silhouette_And_Mirror.mp4](https://archive.blender.org/developer/F9116979/Error_Sculp_Brush_Grab_Silhouette_And_Mirror.mp4)

Added subscriber: @AntonioPuentes

Added subscriber: @AntonioPuentes
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-28 14:25:57 +01:00
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

This is probably a ##grab_delta## instead of ##grab_delta_symmetry## being used in the grab silhouette code.

This is probably a ##grab_delta## instead of ##grab_delta_symmetry## being used in the grab silhouette code.

This issue was referenced by 440ed3ade8

This issue was referenced by 440ed3ade884a4c13fe6ad2324b99e0bfcb426d9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82188
No description provided.